# cherry-studio

./: .clinerules  .roomodes  .windsurfrules  README.md  TEST-README.md  WebContentsView-Test-Report.md  electron-builder.yml  electron-import-fix.js  electron.vite.config.ts  eslint.config.mjs  package.json  roo.clinerules  tsconfig.web.json  tsconfig.web.tsbuildinfo
apps/tauri/metheus-app/: README-AGENTS.md  README.md  docker-compose.yml  index.html  package.json  vite.config.ts
apps/tauri/metheus-app/src-tauri/patches/tauri-plugin-window-2.0.0-alpha.2/: Cargo.toml
apps/tauri/metheus-app/src-tauri/patches/tauri-plugin-window-2.0.0-alpha.2/src/: desktop_commands.rs  lib.rs
docs/: CLAUDE_FIXES.md  CODING.md  DEBUGGING.md  ELECTRON_SECURITY.md  HUGGINGFACE_IMPLEMENTATION.md  HUGGINGFACE_PROVIDER.md  LAYOUT_CORRECTNESS_GUARANTEE.md  MINI_APPS.md  REBRAND.md  WebContentsViewArchitecture.md  dev.md  esm-migration-plan.md  webstorm-debug.md
docs/archive/: WEBCONTENTVIEW-Old.md  WebContentsViewArchitecture-Old.md  WebContentsViewDocumentation-Old.md  WebContentsViewMigrationPlan-Old.md  webcontentsview-implementation-Old.md
docs/speculation/: FLUTTER.md  LYNX.md  TAURI.md
docs/tauri/: AGENTS.md  README.md
public/: test-miniapp.html
resources/data/: agents.json
resources/miniapps/: bolt.diy.html
resources/prometheus-studio/: license.html  releases.html
scripts/: after-pack.cjs  convert-fonts.js
src/main/: debug-helpers.ts  index.ts  ipc.ts
src/preload/: index.ts  miniapp-preload.js  miniapp-preload.ts
src/renderer/: index.html  miniWindow.html
(+211 files in other folders)
