[package]
name = "tauri-plugin-window"
version = "2.0.0-alpha.2"
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Window management for Tauri"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tauri-apps/plugins-workspace"
homepage = "https://tauri.app"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-alpha.18" }
thiserror = "1"
